bolt(pc) 書き終えました。

--- a/index.html
+++ b/index.html
@@ -7,8 +7,138 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/style.css">
+    <title>Bolt - Free Bootstrap 3 Theme</title>
+    <meta name="description" content="This is my portfolio site.">
+    <meta name="keywords" content="bolt, bootstrap, portfolio"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://kit.fontawesome.com/01857b53f2.js" crossorigin="anonymous"></script>
   </head>
   <body>
+    <header class="header">    <!-- ← このclassに背景色の指定、幅いっぱいのやつ -->
+      <div class="inner header-inner">
+        <div class="clearfix">
+          <i class="fa fa-bolt" aria-hidden="true"></i>
+          <a class="Contact-button">Contact</a>
+        </div>
+      </div>    <!-- ← このclassにコンテンツ幅の指定と中央寄せ -->
+    </header>
 
+    <main class="main">
+
+      <div class="title">    <!-- ← このclassに背景色の指定、幅いっぱいのやつ -->
+        <div class="inner title-inner">
+          <div class="main-title">Bolt Theme</div>
+          <div class="sub-title">FREE BOOTSTRAP THEME</div>
+        </div>    <!-- ← このclassにコンテンツ幅の指定と中央寄せ -->
+      </div>
+
+      <section class="section-WhatWeCanDo">    <!-- ← このclassに背景色の指定、幅いっぱいのやつ -->
+        <div class="inner WhatWeCanDo-inner">
+          <div class="WhatWeCanDo-block">
+            <img src="img/iphone.png" alt="iPhone...">
+          </div>
+          <div class="WhatWeCanDo-block">
+            <h1 class="WhatWeCanDo">WHAT WE CAN DO?</h1>
+            <h1 class="WhatWeCanDo-comment">
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
+              Lorem Ipsum has been the industry's standard dummy text ever since the <br>
+              1500s, when an unknown printer took a galley of type and scrambled it to <br>
+              make a type specimen book.
+            </h1>
+          </div>
+        </div>    <!-- ← このclassにコンテンツ幅の指定と中央寄せ -->
+      </section>
+
+      <article class="article-OurLatestWork">    <!-- ← このclassに背景色の指定、幅いっぱいのやつ -->
+        <div class="inner OurLatestWork-inner">
+          <h1 class="OurLatestWork">OUR LATEST WORK</h1>
+          <div class="PhotoGallery">
+            <ul class="PG_nav">
+              <li class="PG_nav_item"><a class="PG_nav_pic"><img src="img/01.jpg" alt=""></a></li>
+              <li class="PG_nav_item"><a class="PG_nav_pic"><img src="img/02.jpg" alt=""></a></li>
+              <li class="PG_nav_item"><a class="PG_nav_pic"><img src="img/03.jpg" alt=""></a></li>
+              <li class="PG_nav_item"><a class="PG_nav_pic"><img src="img/04.jpg" alt=""></a></li>
+              <li class="PG_nav_item"><a class="PG_nav_pic"><img src="img/05.jpg" alt=""></a></li>
+              <li class="PG_nav_item"><a class="PG_nav_pic"><img src="img/06.jpg" alt=""></a></li>
+            </ul>
+          </div>
+
+          <div class="section-Email">
+            <h1 class="text-Email">
+              Lorem Ipsum is simply dummy text of the printing and typesetting <br>
+              industry. Lorem Ipsum has been the industry's standard dummy <br>
+              text ever.
+            </h1>
+            <a class="Email-button">Email Me!</a>
+          </div>
+        </div>    <!-- ← このclassにコンテンツ幅の指定と中央寄せ -->
+      </article>
+
+      <section class="section-OurSkills">    <!-- ← このclassに背景色の指定、幅いっぱいのやつ -->
+        <div class="inner OurSkills-inner">
+          <h1 class="OurSkills">OUR SKILLS</h1>
+          <div class="img-Load">
+            <ul class="OS_nav">
+              <li class="OS_nav_item"><a><img src="img/circle_01.png" alt=""></a><p class="OS_nav_text">JavaScript</p></li>
+              <li class="OS_nav_item"><a><img src="img/circle_02.png" alt=""></a><p class="OS_nav_text">Bootstrap</p></li>
+              <li class="OS_nav_item"><a><img src="img/circle_03.png" alt=""></a><p class="OS_nav_text">WordPress</p></li>
+              <li class="OS_nav_item"><a><img src="img/circle_04.png" alt=""></a><p class="OS_nav_text">PhotoShop</p></li>
+            </ul>
+          </div>
+        </div>    <!-- ← このclassにコンテンツ幅の指定と中央寄せ -->
+      </section>
+
+      <nav class="nav-Sns">    <!-- ← このclassに背景色の指定、幅いっぱいのやつ -->
+        <div class="inner Sns-inner">
+          <ul class="Sns_nav">
+            <li class="Sns_nav_item"><a class="Sns_nav_pic"><i class="fab fa-facebook-f"></i></a></li>
+            <li class="Sns_nav_item"><a class="Sns_nav_pic"><i class="fas fa-basketball-ball"></i></a></li>
+            <li class="Sns_nav_item"><a class="Sns_nav_pic"><i class="fab fa-twitter"></i></a></li>
+            <li class="Sns_nav_item"><a class="Sns_nav_pic"><i class="fas fa-envelope"></i></a></li>
+          </ul>
+        </div>    <!-- ← このclassにコンテンツ幅の指定と中央寄せ -->
+      </nav>
+    </main>
+    <footer class="footer">    <!-- ← このclassに背景色の指定、幅いっぱいのやつ -->
+      <div class="inner footer-inner">
+        <p class="footer_last_comment">Crafted with ❤︎ by BlackTie.co.</p>
+      </div>    <!-- ← このclassにコンテンツ幅の指定と中央寄せ -->
+    </footer>
   </body>
 </html>
+
+<!-- 「WHAT WE CAN DO?」
+Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+「OUR LATEST WORK」
+Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever. -->
+
+
+<!-- main
+  div (theme)
+  section (what we can do)
+  article (our latest work)
+  section (our skills)
+  nav (sns) -->
+
+<!-- 
+デフォルトテキストカラー	#333	
+テーマカラー	#74cfae	
+バックグラウンドカラー（グレー）	#f2f2f2	
+バックグラウンドカラー（ダークグレー）	#4e4e4e	
+
+header
+nav は、ナビゲーションであることを示す際に使用します。 ナビゲーションとは、ウェブサイト内の他のページへのリンクや、ページ内リンクなどのことです。
+    他のページにリンクした箇所のすべてを<nav>～</nav>で囲む必要はなく、主要なナビゲーションとなるセクションのみを示すのに適しています。
+    よく、ウェブページの下部に、利用規約ページ、著作権ページ、トップページへ戻る、などのリンクが配置されることがありますが、 このような場合には<nav>を使用せず、<footer>のみで十分です。
+main
+article タグは、内容が単体で完結するセクションであることを示す際に使用します。 例えば、フォーラムでの投稿、雑誌や新聞の記事、ブログのエントリ、コメントなどです。
+        <article>を入れ子にして使用する場合、内側の<article>の内容は、原則として外側の<article>の内容に関連していることになります。 例えば、<article>タグでくくられたブログのエントリの内側に、さらに<article>タグでくくられたユーザーコメントを入れ子に配置することで、 そのコメントがそのブログエントリに対して投稿されたものであることを示すことができるでしょう。
+        この際、ウェブページ内で<address>タグを使って示されている作者情報は、入れ子の内側の<article>の内容にまでは適用されません。
+section 1.レイアウト目的のコンテナ要素として用いるなら、<section>ではなく、<div>を使用してください。
+        2.その部分の意味を表す見出しを付けることができない場合には、<section>～</section>で囲むのは適切ではないかもしれません。
+        3.上記二点をクリアしてセクションであることが明確な場合にも、より具体的な意味を持つ<article>、<aside>、<nav>のほうがふさわしい場合には、これらのタグを使用します。
+figure  <figure>タグは、図表であることを示す際に使用します。 ここで言う図表とは、文書の本文（メインフロー）から参照されるようなイラスト・図・写真・ソースコードなどのことです。
+        図表は本文から参照される内容ですが、本文に影響を与えることなく、ページの端・専用ページ・別表にして切り離すことができます。
+        必要ならば、図表にキャプションや注釈を付けても良いでしょう。 図表にキャプションを付ける場合には、<figcaption>タグを使用します。
+footer 
+-->
