html aタグにhref=""の記述追加。css 下線消去。snsアイコンの色が異なる色になってしまったので修正。

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="inner header-inner">
         <div class="clearfix">
           <i class="fa fa-bolt" aria-hidden="true"></i>
-          <a class="Contact-button">Contact</a>
+          <a href="" class="Contact-button">Contact</a>
         </div>
       </div>    <!-- ← このclassにコンテンツ幅の指定と中央寄せ -->
     </header>
@@ -54,12 +54,12 @@
           <h1 class="OurLatestWork">OUR LATEST WORK</h1>
           <div class="PhotoGallery">
             <ul class="PG_nav">
-              <li class="PG_nav_item"><a class="PG_nav_pic"><img src="img/01.jpg" alt=""></a></li>
-              <li class="PG_nav_item"><a class="PG_nav_pic"><img src="img/02.jpg" alt=""></a></li>
-              <li class="PG_nav_item"><a class="PG_nav_pic"><img src="img/03.jpg" alt=""></a></li>
-              <li class="PG_nav_item"><a class="PG_nav_pic"><img src="img/04.jpg" alt=""></a></li>
-              <li class="PG_nav_item"><a class="PG_nav_pic"><img src="img/05.jpg" alt=""></a></li>
-              <li class="PG_nav_item"><a class="PG_nav_pic"><img src="img/06.jpg" alt=""></a></li>
+              <li class="PG_nav_item"><a href="" class="PG_nav_pic"><img src="img/01.jpg" alt=""></a></li>
+              <li class="PG_nav_item"><a href="" class="PG_nav_pic"><img src="img/02.jpg" alt=""></a></li>
+              <li class="PG_nav_item"><a href="" class="PG_nav_pic"><img src="img/03.jpg" alt=""></a></li>
+              <li class="PG_nav_item"><a href="" class="PG_nav_pic"><img src="img/04.jpg" alt=""></a></li>
+              <li class="PG_nav_item"><a href="" class="PG_nav_pic"><img src="img/05.jpg" alt=""></a></li>
+              <li class="PG_nav_item"><a href="" class="PG_nav_pic"><img src="img/06.jpg" alt=""></a></li>
             </ul>
           </div>
 
@@ -69,7 +69,7 @@
               industry. Lorem Ipsum has been the industry's standard dummy <br>
               text ever.
             </h1>
-            <a class="Email-button">Email Me!</a>
+            <a href="" class="Email-button">Email Me!</a>
           </div>
         </div>    <!-- ← このclassにコンテンツ幅の指定と中央寄せ -->
       </article>
@@ -79,10 +79,10 @@
           <h1 class="OurSkills">OUR SKILLS</h1>
           <div class="img-Load">
             <ul class="OS_nav">
-              <li class="OS_nav_item"><a><img src="img/circle_01.png" alt=""></a><p class="OS_nav_text">JavaScript</p></li>
-              <li class="OS_nav_item"><a><img src="img/circle_02.png" alt=""></a><p class="OS_nav_text">Bootstrap</p></li>
-              <li class="OS_nav_item"><a><img src="img/circle_03.png" alt=""></a><p class="OS_nav_text">WordPress</p></li>
-              <li class="OS_nav_item"><a><img src="img/circle_04.png" alt=""></a><p class="OS_nav_text">PhotoShop</p></li>
+              <li class="OS_nav_item"><a href=""><img src="img/circle_01.png" alt=""></a><p class="OS_nav_text">JavaScript</p></li>
+              <li class="OS_nav_item"><a href=""><img src="img/circle_02.png" alt=""></a><p class="OS_nav_text">Bootstrap</p></li>
+              <li class="OS_nav_item"><a href=""><img src="img/circle_03.png" alt=""></a><p class="OS_nav_text">WordPress</p></li>
+              <li class="OS_nav_item"><a href=""><img src="img/circle_04.png" alt=""></a><p class="OS_nav_text">PhotoShop</p></li>
             </ul>
           </div>
         </div>    <!-- ← このclassにコンテンツ幅の指定と中央寄せ -->
@@ -91,10 +91,10 @@
       <nav class="nav-Sns">    <!-- ← このclassに背景色の指定、幅いっぱいのやつ -->
         <div class="inner Sns-inner">
           <ul class="Sns_nav">
-            <li class="Sns_nav_item"><a class="Sns_nav_pic"><i class="fab fa-facebook-f"></i></a></li>
-            <li class="Sns_nav_item"><a class="Sns_nav_pic"><i class="fas fa-basketball-ball"></i></a></li>
-            <li class="Sns_nav_item"><a class="Sns_nav_pic"><i class="fab fa-twitter"></i></a></li>
-            <li class="Sns_nav_item"><a class="Sns_nav_pic"><i class="fas fa-envelope"></i></a></li>
+            <li class="Sns_nav_item"><a href="" class="Sns_nav_pic"><i class="fab fa-facebook-f"></i></a></li>
+            <li class="Sns_nav_item"><a href="" class="Sns_nav_pic"><i class="fas fa-basketball-ball"></i></a></li>
+            <li class="Sns_nav_item"><a href="" class="Sns_nav_pic"><i class="fab fa-twitter"></i></a></li>
+            <li class="Sns_nav_item"><a href="" class="Sns_nav_pic"><i class="fas fa-envelope"></i></a></li>
           </ul>
         </div>    <!-- ← このclassにコンテンツ幅の指定と中央寄せ -->
       </nav>
