bolt（pc）１回目の修正。

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
           <div class="WhatWeCanDo-block">
             <h2 class="WhatWeCanDo">WHAT WE CAN DO?</h2>
             <p class="WhatWeCanDo-comment">
-              Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
-              Lorem Ipsum has been the industry's standard dummy text ever since the <br>
-              1500s, when an unknown printer took a galley of type and scrambled it to <br>
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+              Lorem Ipsum has been the industry's standard dummy text ever since the 
+              1500s, when an unknown printer took a galley of type and scrambled it to 
               make a type specimen book.
             </p>
           </div>
@@ -72,8 +72,8 @@
 
           <div class="section-Email">
             <p class="text-Email">
-              Lorem Ipsum is simply dummy text of the printing and typesetting <br>
-              industry. Lorem Ipsum has been the industry's standard dummy <br>
+              Lorem Ipsum is simply dummy text of the printing and typesetting 
+              industry. Lorem Ipsum has been the industry's standard dummy 
               text ever.
             </p>
             <a href="" class="Email-button">Email Me!</a>
