--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="inner header-inner">
         <div class="clearfix">
           <i class="fa fa-bolt" aria-hidden="true"></i>
-          <a href="" class="Contact-button">Contact</a>
+          <a href="" class="Contact-button Base-button">Contact</a>
           <div class="BurgerMenu">
             <span class="Burger_line Burger_line1"></span>
             <span class="Burger_line Burger_line2"></span>
@@ -30,7 +30,7 @@
 
     <main class="main">
 
-      <div class="title">    <!-- ← このclassに背景色の指定、幅いっぱいのやつ -->
+      <div class="title CommonTitle">    <!-- ← このclassに背景色の指定、幅いっぱいのやつ -->
         <div class="inner title-inner">
           <h1 class="main-title">Bolt Theme</h1>
           <!-- ここは下の要素のmargin topでとるのが綺麗 -->
@@ -40,11 +40,11 @@
 
       <section class="section-WhatWeCanDo">    <!-- ← このclassに背景色の指定、幅いっぱいのやつ -->
         <div class="inner WhatWeCanDo-inner">
-          <div class="WhatWeCanDo-block">
+          <div class="WhatWeCanDo-block-first">
             <img src="img/iphone.png" alt="iPhone...">
           </div>
-          <div class="WhatWeCanDo-block">
-            <h2 class="WhatWeCanDo">WHAT WE CAN DO?</h2>
+          <div class="WhatWeCanDo-block-second">
+            <h2 class="WhatWeCanDo CommonTitlee">WHAT WE CAN DO?</h2>
             <p class="WhatWeCanDo-comment">
               Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
               Lorem Ipsum has been the industry's standard dummy text ever since the 
@@ -57,7 +57,7 @@
 
       <article class="article-OurLatestWork">    <!-- ← このclassに背景色の指定、幅いっぱいのやつ -->
         <div class="inner OurLatestWork-inner">
-          <h2 class="OurLatestWork">OUR LATEST WORK</h2>
+          <h2 class="OurLatestWork CommonTitle">OUR LATEST WORK</h2>
           <!-- ここもmargintopでとる -->
           <div class="PhotoGallery">
             <ul class="PG_nav">
@@ -76,14 +76,14 @@
               industry. Lorem Ipsum has been the industry's standard dummy 
               text ever.
             </p>
-            <a href="" class="Email-button">Email Me!</a>
+            <a href="" class="Email-button Base-button">Email Me!</a>
           </div>
         </div>    <!-- ← このclassにコンテンツ幅の指定と中央寄せ -->
       </article>
 
       <section class="section-OurSkills">    <!-- ← このclassに背景色の指定、幅いっぱいのやつ -->
         <div class="inner OurSkills-inner">
-          <h2 class="OurSkills">OUR SKILLS</h2>
+          <h2 class="OurSkills CommonTitlee">OUR SKILLS</h2>
           <div class="img-Load">
             <ul class="OS_nav">
               <li class="OS_nav_item"><img src="img/circle_01.png" alt=""><p class="OS_nav_text">JavaScript</p></li>
